--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <h1 id="titulo" lang="es">Los milagros de nuestra señora</h1>
     </a>
     <div id="conjunto">
-      <video controls class="video">
-        <source src="Barbara.mp4" type="video/mp4">
-      </video>
+      <iframe class="video" src="https://www.youtube.com/embed/DTepMuY87DE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <div id="Enlaces">
         <h1 style="color: brown; text-decoration: underline; font-size: 35px;">Apartados</h1>
         <a href="#Autor"><p class="Enlaces">El Autor</p></a>
